// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billingPlanFeatures getEnterprisePlanCardFeatures should return plan card features for the enterprise plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <React.Fragment>
      Discounted prices for 
      <b>
        10k+ tickets
      </b>
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": "Custom limit of phone numbers",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features for Advanced plan plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      plan={
        Object {
          "amount": 70000,
          "automation_addon_equivalent_plan": "advanced-automation-monthly-usd-2",
          "automation_addon_included": false,
          "cost_per_ticket": 0.2,
          "currency": "usd",
          "currencySign": "$",
          "features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": false,
            },
            "automation_report_issue_flow": Object {
              "enabled": false,
            },
            "automation_return_flow": Object {
              "enabled": false,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": false,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": true,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": true,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 10,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 10,
            },
            "revenue_statistics": Object {
              "enabled": true,
            },
            "satisfaction_surveys": Object {
              "enabled": true,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": true,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "free_tickets": 3000,
          "id": "advanced-monthly-usd-2",
          "integrations": 200,
          "interval": "month",
          "legacy_automation_addon_features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": true,
            },
            "automation_report_issue_flow": Object {
              "enabled": true,
            },
            "automation_return_flow": Object {
              "enabled": true,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": true,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": false,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": true,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 10,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 10,
            },
            "revenue_statistics": Object {
              "enabled": true,
            },
            "satisfaction_surveys": Object {
              "enabled": true,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": true,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "limits": Object {
            "messages": Object {
              "default": 1000,
              "max": 1000,
              "min": 800,
            },
            "tickets": Object {
              "default": 350,
              "max": 350,
              "min": 300,
            },
          },
          "name": "Advanced",
          "order": 3,
          "public": true,
          "trial_period_days": 7,
        }
      }
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        10
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features for Basic plan plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      plan={
        Object {
          "amount": 6000,
          "automation_addon_equivalent_plan": "basic-automation-monthly-usd-2",
          "automation_addon_included": false,
          "cost_per_ticket": 0.25,
          "currency": "usd",
          "currencySign": "$",
          "features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": false,
            },
            "automation_report_issue_flow": Object {
              "enabled": false,
            },
            "automation_return_flow": Object {
              "enabled": false,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": false,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": true,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": false,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 1,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 1,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": false,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "free_tickets": 350,
          "id": "basic-monthly-usd-2",
          "integrations": 200,
          "interval": "month",
          "legacy_automation_addon_features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": true,
            },
            "automation_report_issue_flow": Object {
              "enabled": true,
            },
            "automation_return_flow": Object {
              "enabled": true,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": true,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": false,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": false,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 1,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 1,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": false,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "limits": Object {
            "messages": Object {
              "default": 1000,
              "max": 1000,
              "min": 800,
            },
            "tickets": Object {
              "default": 350,
              "max": 350,
              "min": 300,
            },
          },
          "name": "Basic",
          "order": 1,
          "public": true,
          "trial_period_days": 7,
        }
      }
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": true,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features for Custom plan plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      plan={
        Object {
          "amount": 54000,
          "automation_addon_equivalent_plan": "custom-automation-monthly-usd-2",
          "automation_addon_included": false,
          "cost_per_ticket": 0.23,
          "currency": "usd",
          "currencySign": "$",
          "custom": true,
          "features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": false,
            },
            "automation_report_issue_flow": Object {
              "enabled": false,
            },
            "automation_return_flow": Object {
              "enabled": false,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": false,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": true,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": true,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 50,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 50,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": true,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": true,
              "limit": 10,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": true,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "free_tickets": 2000,
          "id": "custom-monthly-usd-2",
          "integrations": 200,
          "interval": "month",
          "legacy_automation_addon_features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": true,
            },
            "automation_report_issue_flow": Object {
              "enabled": true,
            },
            "automation_return_flow": Object {
              "enabled": true,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": true,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": false,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": true,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 50,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 50,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": true,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": true,
              "limit": 10,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": true,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "limits": Object {
            "messages": Object {
              "default": 1000,
              "max": 1000,
              "min": 800,
            },
            "tickets": Object {
              "default": 350,
              "max": 350,
              "min": 300,
            },
          },
          "name": "Custom",
          "order": 4,
          "public": true,
          "trial_period_days": 7,
        }
      }
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        50
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features for Enterprise plan plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <React.Fragment>
      Discounted prices for 
      <b>
        10k+ tickets
      </b>
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": "Custom limit of phone numbers",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features for Pro plan plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      plan={
        Object {
          "amount": 30000,
          "automation_addon_equivalent_plan": "pro-automation-monthly-usd-2",
          "automation_addon_included": false,
          "cost_per_ticket": 0.23,
          "currency": "usd",
          "currencySign": "$",
          "features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": false,
            },
            "automation_report_issue_flow": Object {
              "enabled": false,
            },
            "automation_return_flow": Object {
              "enabled": false,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": false,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": true,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": true,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 3,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 3,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": true,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "free_tickets": 2000,
          "id": "pro-monthly-usd-2",
          "integrations": 200,
          "interval": "month",
          "legacy_automation_addon_features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": true,
            },
            "automation_report_issue_flow": Object {
              "enabled": true,
            },
            "automation_return_flow": Object {
              "enabled": true,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": true,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": false,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": true,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 3,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 3,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": true,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "limits": Object {
            "messages": Object {
              "default": 1000,
              "max": 1000,
              "min": 800,
            },
            "tickets": Object {
              "default": 350,
              "max": 350,
              "min": 300,
            },
          },
          "name": "Pro",
          "order": 2,
          "public": true,
          "trial_period_days": 7,
        }
      }
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        3
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features for legacy plan 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      plan={
        Object {
          "amount": 6000,
          "automation_addon_equivalent_plan": "basic-automation-monthly-usd-2",
          "automation_addon_included": false,
          "cost_per_ticket": 0.25,
          "currency": "usd",
          "currencySign": "$",
          "features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": false,
            },
            "automation_report_issue_flow": Object {
              "enabled": false,
            },
            "automation_return_flow": Object {
              "enabled": false,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": false,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": true,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": false,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 1,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 1,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": false,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "free_tickets": 350,
          "id": "basic-monthly-usd-2",
          "integrations": 200,
          "interval": "month",
          "legacy_automation_addon_features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": true,
            },
            "automation_report_issue_flow": Object {
              "enabled": true,
            },
            "automation_return_flow": Object {
              "enabled": true,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": true,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": false,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": false,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 1,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 1,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": false,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "limits": Object {
            "messages": Object {
              "default": 1000,
              "max": 1000,
              "min": 800,
            },
            "tickets": Object {
              "default": 350,
              "max": 350,
              "min": 300,
            },
          },
          "name": "Basic",
          "order": 1,
          "public": true,
          "trial_period_days": 7,
        }
      }
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": true,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPlan should return plan card features with disabled help center 1`] = `
Array [
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      plan={
        Object {
          "amount": 6000,
          "automation_addon_equivalent_plan": "basic-automation-monthly-usd-2",
          "automation_addon_included": false,
          "cost_per_ticket": 0.25,
          "currency": "usd",
          "currencySign": "$",
          "features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": false,
            },
            "automation_report_issue_flow": Object {
              "enabled": false,
            },
            "automation_return_flow": Object {
              "enabled": false,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": false,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": true,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": false,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 1,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 1,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": false,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "free_tickets": 350,
          "id": "basic-monthly-usd-2",
          "integrations": 200,
          "interval": "month",
          "legacy_automation_addon_features": Object {
            "auto_assignment": Object {
              "enabled": true,
            },
            "automation_cancellations_flow": Object {
              "enabled": true,
            },
            "automation_report_issue_flow": Object {
              "enabled": true,
            },
            "automation_return_flow": Object {
              "enabled": true,
            },
            "automation_self_service_statistics": Object {
              "enabled": false,
            },
            "automation_track_order_flow": Object {
              "enabled": true,
            },
            "chat_campaigns": Object {
              "enabled": true,
            },
            "facebook_comment": Object {
              "enabled": true,
            },
            "help_center": Object {
              "enabled": false,
            },
            "instagram_comment": Object {
              "enabled": true,
            },
            "instagram_dm": Object {
              "enabled": true,
            },
            "magento_integration": Object {
              "enabled": true,
            },
            "overview_live_statistics": Object {
              "enabled": false,
            },
            "phone_integration": Object {
              "enabled": true,
              "limit": 1,
            },
            "phone_number": Object {
              "enabled": true,
              "limit": 1,
            },
            "revenue_statistics": Object {
              "enabled": false,
            },
            "satisfaction_surveys": Object {
              "enabled": false,
            },
            "teams": Object {
              "enabled": true,
            },
            "twitter_integration": Object {
              "enabled": false,
              "limit": 0,
            },
            "user_roles": Object {
              "enabled": true,
            },
            "users_live_statistics": Object {
              "enabled": false,
            },
            "view_sharing": Object {
              "enabled": true,
            },
            "yotpo_integration": Object {
              "enabled": true,
            },
          },
          "limits": Object {
            "messages": Object {
              "default": 1000,
              "max": 1000,
              "min": 800,
            },
            "tickets": Object {
              "default": 350,
              "max": 350,
              "min": 300,
            },
          },
          "name": "Basic",
          "order": 1,
          "public": true,
          "trial_period_days": 7,
        }
      }
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": true,
    "label": "Satisfaction surveys",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  Object {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  Object {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;
